--- a/xerodashboard/TODO.txt
+++ b/xerodashboard/TODO.txt
@@ -1,7 +1,10 @@
-Resize right, bottom
 Hover over NTValueDisplayWidget title part to get full path of Network Table Entry
 Display an array of items: double, string, boolean
 Display robot position on field
 Bar display of specific NTValueDisplayWidget items
-Concept of currently selected item on dashboard
+Preferences
+  - Align/Tile margin
+  - IP Address Of Network Tables
+  - XeroPlot key text
+
 
